istio/Gateway-VirtualService.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway-workshop
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: cliente-certs
    hosts:
    - 'workshop-mesh-apps-N.apps.kali.rlab.sh'
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: gateway-workshop
spec:
  hosts:
  - 'workshop-mesh-apps-N.apps.kali.rlab.sh'
  gateways:
  - gateway-workshop
  http:
  - match:
    - uri:
        exact: /
    route:
    - destination:
        host: cuenta
        port:
          number: 8080
